--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
@@ -1,5 +1,14 @@
 <div class="${baseClass}">
     <div>
+        <table>
+            <tbody>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
         <main>
   
             <input id="tab1" type="radio" name="tabs-2" checked>
@@ -88,7 +97,9 @@
                     <!-- CSS Load -->
                     <div class="lds-facebook" data-dojo-attach-point="ID_Load"><div></div><div></div><div></div></div>
                     
-                    <div data-dojo-attach-point="ID_Table_Count"></div>
+                    <div class="form-scroll" data-dojo-attach-point="ID_Table_Count" id="ID_Table_Count"></div>
+
+                    <div class="load-time" data-dojo-attach-point="ID_Percentage"></div>
 
                     <div class="form-result-button">
                         <button type="button" class="btn-float" data-dojo-attach-point="ID_Analisis">
@@ -121,25 +132,25 @@
                     <div class="form-Analysis buffer">
                         <p class="analysis-text">Distancia de zona de influencia</p>
                         <input type="number" value="1" placeholder="##" min="1" max="30" data-dojo-attach-point="ID_Buffer">
-                        <p class="analysis-unit">kilométro(s)</p>
+                        <p class="analysis-unit">Metro(s)</p>
                         <center>
                             <button type="button" data-dojo-attach-point="ID_Button_Buffer">
                                 <i class="fa fa-refresh" aria-hidden="true"></i>
                                 Actualizar
                             </button> 
                         </center>
+                        <div class="leyend">
+                            <div>Red Ferroviaria</div>
+                            <div>Red Víal</div>
+                        </div>
                     </div>
-
+                    
                     <label class="subTitle">Resumen de Análisis:</label>
                     <!-- CSS Load -->
                     <div class="lds-facebook" data-dojo-attach-point="ID_Load_Buffer"><div></div><div></div><div></div></div>
                     
                     <div data-dojo-attach-point="ID_Table_Analysis"></div>
 
-
-                    <div class="form-Analysis">
-
-                    </div>
                 
                     <!--
                     <div class="form-content">
