Se considera el uso de LOCALSTORE para la captura del ambito politico que viene del SIGRID - CENEPRED

--- a/CENEPRED/Avance_03/css/style.css
+++ b/CENEPRED/Avance_03/css/style.css
@@ -378,6 +378,7 @@ input.tabs:checked + label {
   right: 0;
   top: 0;
   bottom: 0;
+  /*display: none;*/
 }
 .popup-alert .popup-message {
   background-color: white;
