--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/css/DiagnosticoTerritorial.css
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/css/DiagnosticoTerritorial.css
@@ -478,7 +478,7 @@
 
 
   .hdrm_dt #ID_Table_Count {
-    overflow-y: scroll;
+    overflow-y: auto;
     max-height: 500px;
     margin-top: 10px;
   }
@@ -514,3 +514,40 @@
     overflow: auto;
   }
   */
+
+
+  /**********************************************/
+
+.popup-alert {
+  position: absolute;
+  z-index: 40000;
+  color: #ddd;
+  background-color: rgba(0,0,0,0.5);
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+.popup-alert .popup-message {
+  background-color: white;
+  box-sizing: border-box; 
+  /*margin: 0 auto;*/
+  margin-top: 30%;
+  height: 160px;
+}
+.popup-alert .popup-message div.popup-text {
+  color: #856404;
+  font-family:'Times New Roman', Times, serif; 
+}
+.popup-alert .popup-message div.popup-text h1 { 
+  border-bottom: 2px solid #856404;
+  padding: 15px 0px;
+}
+.popup-alert .popup-message div.popup-text {
+  background-color: #fff3cd;
+  box-sizing: border-box;
+  border-color: #ffeeba;
+  height: 100% !important;
+  padding: 0px 20px;  
+  
+}
