--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
@@ -81,8 +81,9 @@
                         <div class="form-count-title" data-dojo-attach-point="ID_CountText"></div>
                         <!-- <div class="form-count-resul" data-dojo-attach-point="ID_CountResult">0 - 0</div>  -->
                     </div>
-
-                    <label class="subTitle">Resumen de Diagnóstico:</label>
+                    <div class="form-count">
+                        <label class="subTitle">Resumen de Diagnóstico:</label>
+                    </div>
                     <!-- CSS Load -->
                     <div class="lds-facebook" data-dojo-attach-point="ID_Load"><div></div><div></div><div></div></div>
                     
@@ -120,14 +121,13 @@
                     
                     <div class="form-Analysis buffer">
                         <p class="analysis-text">Distancia de zona de influencia</p>
-                        <input type="number" value="1" placeholder="##" min="1" max="30" data-dojo-attach-point="ID_Buffer">
+                        <input type="number" value="1" placeholder="##" min="1" max="30" data-dojo-attach-point="ID_Buffer">    
                         <p class="analysis-unit">Metro(s)</p>
-                        <center>
-                            <button type="button" data-dojo-attach-point="ID_Button_Buffer">
-                                <i class="fa fa-refresh" aria-hidden="true"></i>
-                                Actualizar
-                            </button> 
-                        </center>
+                        <button type="button" data-dojo-attach-point="ID_Button_Buffer">
+                            <i class="fa fa-refresh" aria-hidden="true"></i>
+                            Actualizar
+                        </button> 
+                        
                         <div class="leyend" style="display: none;">
                             <div>Red Ferroviaria</div>
                             <div>Red Víal</div>
@@ -137,9 +137,14 @@
                     <div class="lds-facebook" data-dojo-attach-point="ID_Load_Buffer"><div></div><div></div><div></div></div>
                     <!-- Table Analysis -->
                     <div data-dojo-attach-point="ID_Table_Analysis"></div>
-                    <!-- SubTitle -->
-                    <label class="subTitle">Resumen de Análisis:</label>
-                    <!--<div class="form-scroll" data-dojo-attach-point="ID_Table_Report"></div>-->
+
+                    <div class="form-Analysis">
+                        <!-- SubTitle -->
+                        <label class="subTitle">Resumen de Análisis:</label>
+                    </div>
+                    
+                    <div class="form-scroll" data-dojo-attach-point="ID_Table_Report"></div>
+
                     <!--
                     <div class="form-content">
                         <label class="subTitle">Lista de Análisis</label>
