--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/css/DiagnosticoTerritorial.css
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/css/DiagnosticoTerritorial.css
@@ -390,7 +390,7 @@
 .hdrm_dt .tab-content .load-time {
   text-align: center;
   width: 100%;
-  padding: 5px 0;
+  padding: 10px 0px 5px 0;
   font-weight: bold;
 }
 /* Botones de resultado */
