--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
@@ -122,8 +122,8 @@
                     <div class="form-Analysis buffer">
                         <p class="analysis-text">Distancia de zona de influencia</p>
                         <input type="number" value="1" placeholder="##" min="1" max="30" data-dojo-attach-point="ID_Buffer">    
-                        <p class="analysis-unit">Metro(s)</p>
-                        <button type="button" data-dojo-attach-point="ID_Button_Buffer">
+                        <p class="analysis-unit">Km.</p>
+                        <button type="button" data-dojo-attach-point="ID_Button_BufferUpdate">
                             <i class="fa fa-refresh" aria-hidden="true"></i>
                             Actualizar
                         </button> 
@@ -143,6 +143,9 @@
                         <label class="subTitle">Resumen de Análisis:</label>
                     </div>
                     
+                    <!-- CSS Load -->
+                    <div class="lds-facebook" data-dojo-attach-point="ID_Load_Report"><div></div><div></div><div></div></div>
+                    <!-- Table Report -->
                     <div class="form-scroll" data-dojo-attach-point="ID_Table_Report"></div>
 
                     <!--
