--- a/CENEPRED/Avance_03/css/style.css
+++ b/CENEPRED/Avance_03/css/style.css
@@ -8,7 +8,12 @@ html, body, header { margin: 0; padding: 0; }
 }
 
 body { background-color: #f6f6f6; position: relative;}
-
+.report-main .report-aside label.report-title-resumen {
+  color: rgb(102, 100, 100);
+  font-size: 13px;
+  font-weight: bold;
+  padding-bottom: 10px !important;  
+}
 .report-main {
   background-color: #FFFFFF;
   margin: 0 auto;
@@ -19,7 +24,7 @@ body { background-color: #f6f6f6; position: relative;}
 .report-main .report-title{
   background-color: #4999b0;
   color: #FFFFFF;
-  padding: 7px 15px;
+  padding: 1px 15px;
   margin-bottom: 15px;
 }
 .report-main .report-title h2 {
@@ -103,13 +108,14 @@ body { background-color: #f6f6f6; position: relative;}
   font-family: verdana;
   font-size: 12px;
   height: 450px;
-  width: 100%;
+  width: 100% !important;
 }
 
 .report-table {
   display: block;
   position: relative;
   z-index: 2000;
+  width: 100% !important;
 }
 
 /************************/
@@ -412,4 +418,37 @@ input.tabs:checked + label {
   height: 100% !important;
   padding: 0px 20px;  
   width: 60%;
+}
+
+
+.form-scroll-resumen {
+  max-height: 250px !important;
+  /*margin-top: 10px;*/
+  overflow-y: scroll;  
+  border: 1px solid #aaa;    
+  margin-top: 5px;
+  overflow: auto;
+  box-sizing: border-box;
+  /*padding:0 1rem;*/
+}
+.form-scroll-resumen::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+.form-scroll-resumen::-webkit-scrollbar:vertical {
+  width:10px;
+}
+.form-scroll-resumen::-webkit-scrollbar-button:increment,
+.form-scroll-resumen::-webkit-scrollbar-button {
+  display: none;
+} 
+.form-scroll-resumen::-webkit-scrollbar:horizontal {
+  height: 10px;
+}
+.form-scroll-resumen::-webkit-scrollbar-thumb {
+  background-color: #797979;
+  border-radius: 20px;
+  border: 2px solid #f1f2f3;
+}
+.form-scroll-resumen::-webkit-scrollbar-track {
+  border-radius: 10px;  
 }
