Se solucionno el problema que al darle clic en el nombre del grupo del menu vertical se reliza una consulta

--- a/CENEPRED/Avance_03/css/style.css
+++ b/CENEPRED/Avance_03/css/style.css
@@ -250,6 +250,7 @@ input.tabs:checked + label {
   border-top: 0px solid #2c6975 !important;
   color: #ffa500 !important;
   font-weight: 700 !important;
+  cursor: default;
   padding: 15px 10px;  
 }
 .tabs .tab-header > div:hover,
