--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
@@ -81,8 +81,11 @@
                         <div class="form-count-title" data-dojo-attach-point="ID_CountText"></div>
                         <!-- <div class="form-count-resul" data-dojo-attach-point="ID_CountResult">0 - 0</div>  -->
                     </div>
-                    <div class="form-count">
+                    <div class="form-count" style="position: relative;">
                         <label class="subTitle">Resumen de Diagnóstico:</label>
+                        <button type="button" class="btn-float" data-dojo-attach-point="ID_Analisis" style="position:absolute; right:0; top:-5px; height:23px;">
+                            Análisis
+                        </button>
                     </div>
                     <!-- CSS Load -->
                     <div class="lds-facebook" data-dojo-attach-point="ID_Load"><div></div><div></div><div></div></div>
@@ -92,12 +95,10 @@
                     <div class="load-time" data-dojo-attach-point="ID_Percentage"></div>
 
                     <div class="form-result-button">
-                        <button type="button" class="btn-float" data-dojo-attach-point="ID_Analisis">
-                            <i class="fa fa-reorder" aria-hidden="true"></i> Análisis
-                        </button>
+                        
                         <span>
-                            <select data-dojo-attach-point="ID_Diagnosis_Format"></select>
-                            <button type="button" data-dojo-attach-point="ID_Diagnosis_Download">
+                            <div data-dojo-attach-point="ID_Diagnosis_Format"></div>
+                            <button type="button" data-dojo-attach-point="ID_Diagnosis_Download" style="display: none;">
                                 <i class="fa fa-download" aria-hidden="true"></i> Descargar
                             </button>    
                         </span>                    
@@ -108,33 +109,39 @@
               
             <section id="content3">
                 <div class="tab-content">
-                    
                     <div class="form-Analysis buffer">
+                        <div class="form-row form-horizontal">
+                            <div data-dojo-attach-point="ID_Analysis_Buffer"></div>
+                        </div>
                         <p class="analysis-text">Distancia de zona de influencia</p>
                         <input type="number" value="1" placeholder="##" min="1" max="30" data-dojo-attach-point="ID_Buffer">    
                         <p class="analysis-unit">Km.</p>
                         <button type="button" data-dojo-attach-point="ID_Button_BufferUpdate">
                             <i class="fa fa-refresh" aria-hidden="true"></i> Actualizar
                         </button> 
-                        
+                        <!--
                         <div class="leyend" style="display: none;">
                             <div>Red Ferroviaria</div>
                             <div>Red Víal</div>
                         </div>
+                        -->
                     </div>
+                    <!-- SubTitle -->
+                    <div class="form-Analysis">
+                        <label class="subTitle">» Cálculo de capa seleccionada:</label>
+                    </div>  
                     <!-- CSS Load -->
                     <div class="lds-facebook" data-dojo-attach-point="ID_Load_Buffer"><div></div><div></div><div></div></div>
                     <!-- Table Analysis -->
-                    <div data-dojo-attach-point="ID_Table_Analysis"></div>
+                    <div data-dojo-attach-point="ID_Table_Buffer"></div>
                     <!-- SubTitle -->
                     <div class="form-Analysis">
-                        <label class="subTitle">Resumen de Análisis:</label>
+                        <label class="subTitle">» Resumen de Análisis:</label>
                     </div>                    
                     <!-- CSS Load -->
-                    <div class="lds-facebook" data-dojo-attach-point="ID_Load_Report"><div></div><div></div><div></div></div>
+                    <div class="lds-facebook" data-dojo-attach-point="ID_Load_Analysis"><div></div><div></div><div></div></div>
                     <!-- Table Report -->
-                    <div class="form-scroll" data-dojo-attach-point="ID_Table_Report"></div>
-
+                    <div class="form-scroll" data-dojo-attach-point="ID_Table_Analysis"></div>
                     <!--
                     <div class="form-content">
                         <label class="subTitle">Lista de Análisis</label>
@@ -143,8 +150,7 @@
                             <option value="">Formato</option>
                         </select>                        
                     </div>
-                    -->
-                    
+                    -->                    
                     <!--
                     <div class="form-result form-scroll" data-dojo-attach-point="ID_Result_List">
                         <div class="form-card">
@@ -161,18 +167,23 @@
                         </div> 
                     </div>
                     -->
+                    <div class="load-time" data-dojo-attach-point="ID_Percentage_analysis"></div>
 
+                    <div class="form-row" data-dojo-attach-point="ID_Analysis_Format">
+
+                    </div>
+
+                    <!--
                     <div class="form-result-button">
                         <span>
-                            <select data-dojo-attach-point="ID_Analysis_Format"></select>
+                            <div data-dojo-attach-point="ID_Analysis_Format"></div>
                             <button type="button" data-dojo-attach-point="ID_Analysis_Download">
                                 <i class="fa fa-download" aria-hidden="true"></i> Descargar
                             </button>    
                         </span>                    
                     </div>
-
-                </div>
-            
+                -->
+                </div>            
             </section>
         </main>
         
